--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ img {
 <body>
 	<div>
 	<figure>
-	<a href="file:///Users/brendanreynoldsstoianov/Desktop/ARTS%20530/Website_development/Digital_works.html">
+	<a href="https://brainybrendan25.github.io/Digital_works/" title="Digital Works">
 	<img src="https://cdn.myportfolio.com/bd33f49c-87c8-4d90-aa56-be8c32b4f43f/55142e3d-4081-4167-91c3-4ee1d8f0542d_rw_1200.jpg?h=f1087abb530a7edf9c27bdfa01043485" alt="Illustration Series Bottom Right" style="width:800px;height=1200px">
 	<div class="center">
 	</a>
